--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/reportingsystemdb?useUnicode=true&useLegacyDatetimeCode
+spring.datasource.url=jdbc:mysql://localhost:3306/reporting-system?useUnicode=true&useLegacyDatetimeCode
 spring.datasource.username=root
-spring.datasource.password=19962646159
+spring.datasource.password=19962646159Mm.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
