--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	<dependency>
+    	<groupId>javax.xml.bind</groupId>
+    	<artifactId>jaxb-api</artifactId>
+    	<version>2.3.0-b170201.1204</version>
+	</dependency>
+
 
 	<build>
 		<plugins>
