added refresh token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 
 ozguryazilim.app.secret = ozguryazilim
-ozguryazilim.expires.in = 604800
+ozguryazilim.expires.in = 3600
+refresh.token.expires.in = 604800
