--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,10 @@
  			 <artifactId>thymeleaf-layout-dialect</artifactId>
   
 		</dependency>
-
+		<dependency>
+ 			<groupId>org.springframework.boot</groupId>
+ 			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -79,12 +82,13 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<dependency>
+	<!--<dependency>
     	<groupId>javax.xml.bind</groupId>
     	<artifactId>jaxb-api</artifactId>
     	<version>2.3.0-b170201.1204</version>
-	</dependency>
-
+	</dependency>--> 
+	<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
+	
 
 	<build>
 		<plugins>
