--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
+# database url
 spring.datasource.url=jdbc:mysql://localhost:3306/reporting-system?useUnicode=true&useLegacyDatetimeCode
+# database username and password
 spring.datasource.username=root
 spring.datasource.password=19962646159Mm.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -8,5 +10,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 ozguryazilim.app.secret = ozguryazilim
-ozguryazilim.expires.in = 360000
+# 1 hour in milliseconds
+ozguryazilim.expires.in = 3600000  
+# 7 days in seconds
 refresh.token.expires.in = 604800
+
+
+server.port = 8000
