--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.7.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>  
 	</parent>
 	<groupId>com.project</groupId>
 	<artifactId>ozgur-yazilim</artifactId>
@@ -83,12 +83,7 @@
 		</dependency>
 	</dependencies>
 	
-	<!--<dependency>
-    	<groupId>javax.xml.bind</groupId>
-    	<artifactId>jaxb-api</artifactId>
-    	<version>2.3.0-b170201.1204</version>
-	</dependency>--> 
-	<!-- https://mvnrepository.com/artifact/javax.servlet/servlet-api -->
+
 	
 
 	<build>
